fix: scroll icon. fix: menu button functionality

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span class="menu-icon"></span>
                     <span class="menu-icon"></span>
                 </span>
-                <ul id="menu-list">
+                <ul id="menu-list" style="display: none;">
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#about">About</a></li>
@@ -186,7 +186,9 @@
     </div>
     <!-- footer end -->
     <!-- Scroll To top -->
-    <a href="#" onclick="window.scrollTo(0,0);" id="scroll-anchor"><i class="fa-solid fa-arrow-up"></i></a>
+    <a href="#" id="scroll-anchor" onclick="scrollPage(); return false;">
+        <i class="fa-solid fa-arrow-up" onclick=""></i>
+    </a>
 </body>
 
 </html>
