feature: progress-bar added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             </div>
         </div>
     </div>
+    <!-- progress bar start -->
+    <div class="progress-bar"></div>
+    <!-- progress bar end -->
     <!-- Landing Section -->
     <div class="landing">
         <div class="container">
